force-app/main/default/objects/Case/fields/MMS_Category_1__c.field-meta.xml
<CustomField>
    <fullName>MMS_Category_1__c</fullName>
    <label>MMS Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNTS RECEIVABLE</fullName>
            </value>
            <value>
                <fullName>CLIENT MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>CLIENT SUPPORT</fullName>
            </value>
            <value>
                <fullName>COMPUTER ROOM</fullName>
            </value>
            <value>
                <fullName>DATA INTEGRITY</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTION</fullName>
            </value>
            <value>
                <fullName>GENERAL</fullName>
            </value>
            <value>
                <fullName>IMPERFECT PAYROLL</fullName>
            </value>
            <value>
                <fullName>LOST CLIENT</fullName>
            </value>
            <value>
                <fullName>NEW LOAD</fullName>
            </value>
            <value>
                <fullName>PAYROLL MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>PREVIEW FEATURES</fullName>
            </value>
            <value>
                <fullName>QE/YE</fullName>
            </value>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>TAX REPORT</fullName>
            </value>
            <value>
                <fullName>TECHNICAL</fullName>
            </value>
            <value>
                <fullName>TRAINING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>