force-app/main/default/objects/Case/fields/MMS_Client_Issue_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>MMS_Client_Issue_Reported_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to enter the name of the client contact who is reporting the issue.  This should be one of the Related Client Admins. authorized to speak about payroll related issues.</inlineHelpText>
    <label>MMS Client Issue Reported By</label>
    <length>35</length>
    <type>Text</type>
</CustomField>