force-app/main/default/objects/Case/fields/MMS_CSR__c.field-meta.xml
<CustomField>
    <fullName>MMS_CSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MMS CSR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MMSCases</relationshipName>
    <type>Lookup</type>
</CustomField>