force-app/main/default/objects/Case/fields/Number_of_Client_IDs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_IDs__c</fullName>
    <label>Number of Client IDs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>