force-app/main/default/objects/Case/fields/Number_of_locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_locations__c</fullName>
    <label>Number of locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10 - 15</fullName>
            </value>
            <value>
                <fullName>16 - 20</fullName>
            </value>
            <value>
                <fullName>&gt; 21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>