force-app/main/default/objects/Case/fields/OE_start_date__c.field-meta.xml
<CustomField>
    <fullName>OE_start_date__c</fullName>
    <description>APR0153141 Agency - Flock EDI Case for improved tracking</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Flock EDI Case for improved tracking</inlineHelpText>
    <label>OE start date</label>
    <type>Date</type>
</CustomField>