force-app/main/default/objects/Case/fields/Order_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Order_Category_2__c</fullName>
    <label>Order Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Category_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On Order</fullName>
            </value>
            <value>
                <fullName>Billing Transfer/COO</fullName>
            </value>
            <value>
                <fullName>New Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>