force-app/main/default/objects/Case/fields/Other_PEO_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_PEO_Client_Number__c</fullName>
    <formula>Account.Other_PEO_Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other PEO Client Number</label>
    <type>Text</type>
</CustomField>