force-app/main/default/objects/Case/fields/Paychex_Payroll_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Payroll_Specialist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paychex Payroll Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>