force-app/main/default/objects/Case/fields/Payroll_Branch_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Branch_Nbr__c</fullName>
    <formula>Account.Payroll_Branch_Nbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Branch Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>