force-app/main/default/objects/Case/fields/Payroll_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>