force-app/main/default/objects/Case/fields/PENS__c.field-meta.xml
<CustomField>
    <fullName>PENS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PENS</label>
    <type>Checkbox</type>
</CustomField>