force-app/main/default/objects/Case/fields/Premier_Concern_1__c.field-meta.xml
<CustomField>
    <fullName>Premier_Concern_1__c</fullName>
    <description>Used by Premier to note client issues</description>
    <inlineHelpText>Specific issue(s) with Premier Sub-Product 1</inlineHelpText>
    <label>HR Services Concern 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Premier_Sub_Product_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ability to Answer Questions</fullName>
            </value>
            <value>
                <fullName>Ability to Reach Specialist</fullName>
            </value>
            <value>
                <fullName>Ability to Resolve Issues</fullName>
            </value>
            <value>
                <fullName>AE Process</fullName>
            </value>
            <value>
                <fullName>Annual Price Increase</fullName>
            </value>
            <value>
                <fullName>Antiquated Technology</fullName>
            </value>
            <value>
                <fullName>Auto Enroll</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing Errors</fullName>
            </value>
            <value>
                <fullName>Carrier Choices</fullName>
            </value>
            <value>
                <fullName>Client passing along additional info</fullName>
            </value>
            <value>
                <fullName>Client requested call back</fullName>
            </value>
            <value>
                <fullName>Client requesting product information</fullName>
            </value>
            <value>
                <fullName>Client Requesting Safety Follow up</fullName>
            </value>
            <value>
                <fullName>Client Under-Utilizing Products</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Client Wishes to Downgrade Service</fullName>
            </value>
            <value>
                <fullName>Client Wishes to Leave</fullName>
            </value>
            <value>
                <fullName>Cobra - Notification Concerns</fullName>
            </value>
            <value>
                <fullName>Cobra - Online Technology</fullName>
            </value>
            <value>
                <fullName>Cobra - Set up of Conversion Issues</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Cost of Plans</fullName>
            </value>
            <value>
                <fullName>COVID-19: Return to Work</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Errors on Returns</fullName>
            </value>
            <value>
                <fullName>Expected Services NOT Received</fullName>
            </value>
            <value>
                <fullName>Financial Difficulties/Restrictions</fullName>
            </value>
            <value>
                <fullName>First Payroll Did Not Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Follow-Through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>