force-app/main/default/objects/Case/fields/Premier_Sub_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Premier_Sub_Product_1__c</fullName>
    <description>Level 2 of Premier products</description>
    <inlineHelpText>Product or Service that the Premier client is dissatisfied with</inlineHelpText>
    <label>HR Services Sub-Product 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>EE SS Tax Deferral</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>General Ledger</fullName>
            </value>
            <value>
                <fullName>H&amp;B</fullName>
            </value>
            <value>
                <fullName>Handbooks</fullName>
            </value>
            <value>
                <fullName>HR Forms/Manuals</fullName>
            </value>
            <value>
                <fullName>HR Rep</fullName>
            </value>
            <value>
                <fullName>HR Seminars/Service</fullName>
            </value>
            <value>
                <fullName>HR Solutions</fullName>
            </value>
            <value>
                <fullName>Informational Alert</fullName>
            </value>
            <value>
                <fullName>Online Technology - General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Safety and Loss</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SUI</fullName>
            </value>
            <value>
                <fullName>TIB</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>