force-app/main/default/objects/Case/fields/Prior_Quarter_Wages__c.field-meta.xml
<CustomField>
    <fullName>Prior_Quarter_Wages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Quarter Wages</label>
    <type>Date</type>
</CustomField>