force-app/main/default/objects/Case/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Date</label>
    <type>Date</type>
</CustomField>