force-app/main/default/objects/Case/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any kind of notes code needs to make for internal processing.</inlineHelpText>
    <label>Process Notes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>