force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>List Of Paychex Products For Case. BJ 7_14
LM - If you add products that will be available for Case Record Type Service Onboarding STM Record Type, make sure you add the product to the object relationship that creates the correct Reference TAA object.</description>
    <inlineHelpText>Select the product.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>Advisor Select</fullName>
            </value>
            <value>
                <fullName>Ancillary Products</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>BeneTrac</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>CAOP/PNG</fullName>
            </value>
            <value>
                <fullName>Check Insertion</fullName>
            </value>
            <value>
                <fullName>Check logo service</fullName>
            </value>
            <value>
                <fullName>Check Stubs</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Compliance Testing</fullName>
            </value>
            <value>
                <fullName>Corporate Complaints</fullName>
            </value>
            <value>
                <fullName>CT-900</fullName>
            </value>
            <value>
                <fullName>Data Entry Specialist</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>EAM</fullName>
            </value>
            <value>
                <fullName>EAO</fullName>
            </value>
            <value>
                <fullName>EAP, Employee Assistance Program</fullName>
            </value>
            <value>
                <fullName>Employee Screening Service</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>ExpenseWire</fullName>
            </value>
            <value>
                <fullName>FBAE</fullName>
            </value>
            <value>
                <fullName>Field Support</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Flex Ben Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>