force-app/main/default/objects/Case/fields/Products_Multi__c.field-meta.xml
<CustomField>
    <fullName>Products_Multi__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>FlexTime</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>H&amp;B</fullName>
            </value>
            <value>
                <fullName>HRO</fullName>
            </value>
            <value>
                <fullName>myStaffingPro</fullName>
            </value>
            <value>
                <fullName>P&amp;C/WC</fullName>
            </value>
            <value>
                <fullName>Paychex Learning Enhanced/Essentials</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PBA</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PST/Trueshift</fullName>
            </value>
            <value>
                <fullName>S125</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>