force-app/main/default/objects/Case/fields/project_cloud__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Project Phase that the Case is in relation too.</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>