force-app/main/default/objects/Case/fields/Prospect_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect-Client Number</label>
    <type>Text</type>
</CustomField>