force-app/main/default/objects/Case/fields/Question_Concern__c.field-meta.xml
<CustomField>
    <fullName>Question_Concern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question/Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>