force-app/main/default/objects/Case/fields/Reason_for_escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_escalation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for escalation?</label>
    <type>TextArea</type>
</CustomField>