force-app/main/default/objects/Case/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <description>Case 26171567</description>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Contractual Agreement from Paychex</fullName>
            </value>
            <value>
                <fullName>Too many solicitations</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
            <value>
                <fullName>Sales Rep aggressive/rude</fullName>
            </value>
            <value>
                <fullName>Unhappy with Service</fullName>
            </value>
            <value>
                <fullName>Other (Please explain in description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>