force-app/main/default/objects/Case/fields/Reassign_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Category_1__c</fullName>
    <description>Used for Case Reassignments:
     401k/S125    BJ 7_13_09
     TAA FL   2/5/10</description>
    <label>Reassign-Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401k Quarter End Packages</fullName>
            </value>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>Admin Call out Request</fullName>
            </value>
            <value>
                <fullName>Advisor Compensation</fullName>
            </value>
            <value>
                <fullName>AS East</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ASO PBA Referral</fullName>
            </value>
            <value>
                <fullName>ASO to PEO Transfer</fullName>
            </value>
            <value>
                <fullName>AS Pacific</fullName>
            </value>
            <value>
                <fullName>Asset Manual Transfer</fullName>
            </value>
            <value>
                <fullName>Audit – S125</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing - 401k</fullName>
            </value>
            <value>
                <fullName>Billing - S125</fullName>
            </value>
            <value>
                <fullName>Call out Request - 401k</fullName>
            </value>
            <value>
                <fullName>Call out Request – HSA</fullName>
            </value>
            <value>
                <fullName>Call out Request - S125</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Cancellation - 401k</fullName>
            </value>
            <value>
                <fullName>Cancellation - HSA</fullName>
            </value>
            <value>
                <fullName>Cancellation - S125</fullName>
            </value>
            <value>
                <fullName>Case Question</fullName>
            </value>
            <value>
                <fullName>Checksigning</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Client Audit/Document Request</fullName>
            </value>
            <value>
                <fullName>Client Level Change - 401k</fullName>
            </value>
            <value>
                <fullName>Client Level Change - S125</fullName>
            </value>
            <value>
                <fullName>Client Plan Year Rollover</fullName>
            </value>
            <value>
                <fullName>Client Relations Use Only</fullName>
            </value>
            <value>
                <fullName>Client Support - 401k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>