force-app/main/default/objects/Case/fields/Reassign_Category_4__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Category_4__c</fullName>
    <description>Used for Case Reassignments. 401k/S125. BJ 7_13</description>
    <label>Reassign-Category 4</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reassign_Category_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3(16) Contact</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Add a Plan</fullName>
            </value>
            <value>
                <fullName>After Hours Plan Design Call</fullName>
            </value>
            <value>
                <fullName>Amendment Request</fullName>
            </value>
            <value>
                <fullName>Annual Match Contribution</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>B/D Firm Not Valid</fullName>
            </value>
            <value>
                <fullName>Business Hours Plan Design Call</fullName>
            </value>
            <value>
                <fullName>Call Out Requested</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>Contributions</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Conversion Signed AA</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>EE Not in WEX</fullName>
            </value>
            <value>
                <fullName>Email FS HRS 1</fullName>
            </value>
            <value>
                <fullName>Email FS HRS 2</fullName>
            </value>
            <value>
                <fullName>Email FS HRS 3</fullName>
            </value>
            <value>
                <fullName>Email FS HRS 4</fullName>
            </value>
            <value>
                <fullName>Email HRS FS 5</fullName>
            </value>
            <value>
                <fullName>Email HRS FS 6</fullName>
            </value>
            <value>
                <fullName>Employee Information</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Enrollment Change - Current Year</fullName>
            </value>
            <value>
                <fullName>Enrollment Change - Prior Year</fullName>
            </value>
            <value>
                <fullName>Exception Request</fullName>
            </value>
            <value>
                <fullName>Fed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>