force-app/main/default/objects/Case/fields/Recurring_Earning_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Earning_Deductions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recurring Earning &amp; Deductions</label>
    <type>Date</type>
</CustomField>