force-app/main/default/objects/Case/fields/Reference_PEO__c.field-meta.xml
<CustomField>
    <fullName>Reference_PEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Reference PEO record</description>
    <label>Reference PEO</label>
    <referenceTo>Reference_PEO__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Case_Reference_PEO</relationshipName>
    <type>Lookup</type>
</CustomField>